new chapter: grand canonical ensembles

--- a/note_stat.tex
+++ b/note_stat.tex
@@ -1,4 +1,4 @@
-\documentclass[hyperref,UTF-8]{ctexart}
+\documentclass[hyperref,UTF-8]{ctexbook}
 \usepackage{ctex}
 \usepackage[dvipsnames,svgnames]{xcolor}
 \usepackage{newtxtext}
@@ -15,6 +15,7 @@
 \usepackage{cite}
 \usepackage{bm}
 \usepackage[colorlinks,linkcolor = Black]{hyperref}
+\usepackage{fancyhdr}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\F}{\mathbb{F}}
 \newcommand{\N}{\mathbb{N}}
@@ -155,9 +156,11 @@ pdfstartview = Fit
 \CTEXsetup[format={\bfseries}]{subsection}
 
 
-\geometry{a4paper,left = 2cm, right = 2cm, top = 2cm, bottom = 2cm}
+\geometry{a4paper,left = 2.5cm, right = 2.5cm, top = 2.5cm, bottom = 2.5cm}
 
 \linespread{1.7}
+
+
 \begin{document}
 \setparDis
 
@@ -214,7 +217,7 @@ pdfstartview = Fit
 \pagebreak
 \fontsize{12pt}{16pt}
 
-\section{前言}
+\chapter{前言}
 
 统计力学将热力学问题归结于 \textcolor{RoyalBlue}{\textbf{\kaishu 概率与统计推断}}，以等概率假设与遍历性假设为基础，建立起一整套关于微观-宏观相互联系的桥梁。通过一定的统计推断，我们可以从众多自由度中提取出一些重要信息，而忽视一些细节，或者无关紧要的部分\cite{suyu}。
 
@@ -240,7 +243,7 @@ pdfstartview = Fit
 \pagebreak 
 
 
-\section{系综理论的基本原理}
+\chapter{系综理论的基本原理}
 
 经典力学通过相空间中的点 $(q,p)$ 来描述一个系统的某个状态。它们的演化满足正则方程
 \begin{align*}
@@ -253,7 +256,7 @@ pdfstartview = Fit
 
 现在，这一大群具有与宏观态相同宏观性质的微观态随着时间的变化都会在相空间内画出一条条轨迹，同时这个集合的位置和形状也会随着时间不断变化。和在力学中所遵循的思路相似，我们希望找出这一演化的运动积分，而 \textcolor{RoyalBlue}{\textbf{\kaishu 刘维尔定理}} 则能完成这个任务。
 
-\subsection{刘维尔定理}
+\section{刘维尔定理}
 
 虽然每一个宏观态统摄下的微观态都具有相同的宏观性质，但它们在系综所包括的区域内的分布可能不是均匀的，有疏密之分。这驱使我们定义 \textcolor{RoyalBlue}{\textbf{\kaishu 相点密度}} $\rho(q,p,t)$ 如下：
 \begin{equation}
@@ -296,7 +299,7 @@ pdfstartview = Fit
     这个场穿过了系综内所有的相点，所有的相点都沿着这个场进行运动，那么这个场的对象当然就是整个系综了。
     \end{justification}
 
-\subsection{分布函数}
+\section{分布函数}
 
 从刘维尔定理可以知道，既然分布函数 $\rho$ 是一个物理量，它必然是变量 $q,p,t$ 的函数，并且以某一点所代表的子系统在运动时保持不变。所以，它应当可以被写作系统所有独立运动积分的一些组合。
 
@@ -329,9 +332,9 @@ pdfstartview = Fit
 
 
 
-\subsection{微正则系综}
+\section{微正则系综}
 
-\subsubsection{对热力学的反思}
+\subsection{对热力学的反思}
 
 为了理清科学家们提出微正则系综的灵感来源，在进入正式的讨论之前，我们先进行一些哲学反思：自然界基于什么理由使得热力学过程得以发生？隐藏在看起来非常混乱的物理化学I的教学内容背后的，究竟是什么规律？
 
@@ -372,7 +375,7 @@ pdfstartview = Fit
 由此可见，\textcolor{RoyalBlue}{\textbf{\kaishu 统计力学之路，莫非陟降二途。}}陟，意指向峰巅攀爬，即导出基本定律，同时厘清各种热力学概念；降，下山，即将基本原理应用于诸多情形。下面我们先来爬山。非常明显，基于以上的反思，这第一个台阶应是计算 $\Omega (N,V,E)$ 的表达式。 
 
 
-\subsubsection{微正则系综的研究方法}
+\subsection{微正则系综的研究方法}
 
 从前文可知，选择决策参量 $(N,V,E)$ 来描述一个正在执行优化过程的系统是一件非常自然的事，因为我们的目标是用它们表示出配容数 $\Omega$ 。对于粒子数 $N$ 和体积 $V$ 的约束不太能够导出新的关系，但是对能量的限制却可以：对于一个有确定能量的系统，它有许多的简并态。在这些简并态中，我们没有理由认为其中哪一个是比另外几个更优越——因为极小的扰动都会使得系统从一个态变为能量差不多相等的另一个态。
 
@@ -410,7 +413,7 @@ pdfstartview = Fit
 
 
 
-\subsection{经典理想气体}
+\section{经典理想气体}
 
 作为一个爬山的例子，我们现在来推导经典理想气体所满足的\textcolor{RoyalBlue}{\textbf{\kaishu 能量均分定理}} 和 \textcolor{RoyalBlue}{\textbf{\kaishu 理想气体状态方程}}：
 \begin{align*}
@@ -418,7 +421,7 @@ pdfstartview = Fit
     E = \frac{3}{2}N k_B T
 \end{align*}
 
-\subsubsection{一些直觉}\label{intuition}
+\subsection{一些直觉}\label{intuition}
 
 经典理想气体是一个 \textcolor{RoyalBlue}{\textbf{\kaishu 由无相互作用粒子组成、且不考虑粒子内部结构的经典系统}} 。之所以考虑这样一个系统，是因为它可以对 $\Omega(N,V,E)$ 提供一个明确的计算方法（虽然这种方法是渐进性质的）。 
 
@@ -437,7 +440,7 @@ pdfstartview = Fit
     PV = nRT
 \end{equation}
 
-\subsubsection{$\Omega$ 的计算}
+\subsection{$\Omega$ 的计算}
 
 考虑以 $a$ 为边长的三维势箱，若只有一个粒子：$N =1,V = a^3, E = \epsilon$ 。以下使用国际单位制考虑量级，是为了能够方便地看出某些项是否可以忽略。根据量子力学，系统的能级为
 \begin{equation}
@@ -499,16 +502,16 @@ pdfstartview = Fit
     \quad\quad 不过，对于不可分辨粒子设定的合理性，则需要追溯至吉布斯佯谬中来。若认为组成理想气体的各个粒子是可以标号的，首先便会导致推出的熵公式不满足加和性。其次，在考虑同种粒子在同一压强下的混合时，也会推出此时的混合熵正定的矛盾\cite{Pathria}。基于逻辑上的考虑，认为这些粒子具有全同性会使得我们的理论自洽。
 \end{justification}
 
-\subsection{总结}
+\section{总结}
 
-微正则系综以其简单的配容数世界观为基础，帮助我们爬上了统计力学的半山腰。但如果继续向峰巅攀爬将会变得困难，因为微正则系综是一个非常形而上的理论，它对优化参量 $(N,V,E)$ 准确度的要求让我们这些有限的生命望而却步——对于大多数物理系统来说，测量 $(N,V,E)$ 将是一个非常艰巨的任务，更不要说计算出 $\Omega(N,V,E)$ 。
+微正则系综以其简单的最优化世界观为基础，帮助我们爬上了统计力学的半山腰。它以配容数 $\Omega $ 及其对数 $S = k_B \ln \Omega$ 为第一性的量，给了热力学一个完整的逻辑解释。对于经典理想气体，为了计算以 $(N,V,E)$ 为标记的宏观态所能处于的可能的微观态数目，根据粒子能量所可能取值的特点，我们选择将微观态数目与 $3N$ 维状态空间中的球体进行对应。而热力学极限让我们可以合法地使用微分代替寻找方程的整数解，从而得到 $\ln \Omega$ 的渐进表达式。对于量子谐振子系统，则可以使用排列组合直接得到 $\Omega$ 的显式表达式。
+
+但如果继续向峰巅攀爬将会变得困难，因为微正则系综是一个非常形而上的理论，它对优化参量 $(N,V,E)$ 准确度的要求让我们这些有限的生命望而却步——对于大多数物理系统来说，测量 $(N,V,E)$ 将是一个非常艰巨的任务，更不要说计算出 $\Omega(N,V,E)$ 。
 
 但微正则系综作为我们的理论起点，是值得肯定的，它是我们登山过程中的一条在山脊上延伸的小径。这里先对微正则系综研究方法进行一些总结，然后在下一节中，我们将换个方向——换到沿山谷的石板路上来。
 
 \begin{understanding}{\kaishu 对微正则系综的总结}
 \kaishu \fontsize{11pt}{16pt}
-\quad\quad 微正则系综以配容数 $\Omega $ 及其对数 $S = k_B \ln \Omega$ 为第一性的量，给了热力学一个完整的逻辑解释。对于经典理想气体，为了计算以 $(N,V,E)$ 为标记的宏观态所能处于的可能的微观态数目，根据粒子能量所可能取值的特点，我们选择将微观态数目与 $3N$ 维状态空间中的球体进行对应。而热力学极限让我们可以合法地使用微分代替寻找方程的整数解，从而得到 $\ln \Omega$ 的渐进表达式。对于量子谐振子系统，则可以使用排列组合直接得到 $\Omega$ 的显式表达式。
-
 \quad\quad 使用微正则系综处理问题可以遵循这样的顺序：
     \begin{enumerate}
         \item 微正则系综的核心量是配容数 $\Omega$
@@ -519,11 +522,11 @@ pdfstartview = Fit
 
 \end{understanding}
 
-\section{正则系综}
+\chapter{正则系综}
 
 前面我们从对热力学的反思中建立了系综理论的基本原理，以 $\Omega$ 为最优化函数， $(N,V,E)$ 为决策变量，通过它们之间的依赖关系我们可以得到系统的所有热力学性质。现在，我们要对微正则系综理论进行反思，并找出一个可以弥补它缺点的解决方案。
 
-使用 $(N,V,E)$ 作为描述系统的最优化过程是一件非常自然的事，因为它们都是广度性质，而使用一些和系统大小成正比的量作为系统的状态参量无疑是非常直观的。然而，这样的直观反而使得我们的理论变得抽象与不切实际：我们很少测量一个物理系统的总能量，并且要想固定它也是很不容易的。
+使用 $(N,V,E)$ 作为描述系统的最优化过程是一件非常自然的事，因为它们都是广度性质，而使用一些和系统大小成正比的量作为系统的状态参量无疑是非常直观的。然而，这样的直观反而使得我们的理论变得形而上，以至于不切实际：例如，我们很少测量一个物理系统的总能量，并且要想固定它也是很不容易的。
 
 \textcolor{RoyalBlue}{\textbf{\kaishu 问题的根源在于：对微正则系综的三个广度决策变量的测量，不具有实际的可行性。}}  
 
@@ -545,7 +548,7 @@ pdfstartview = Fit
 
 其中 $A$ 就是亥姆霍兹自由能，满足 $A = E - TS$ ，以之为核心的即是 \textcolor{RoyalBlue}{\textbf{\kaishu 正则系综}}。
 
-\subsection{正则分布最概然方法}
+\section{正则分布最概然方法}
 
 下面我们来将前面的反思落到实处，此时有必要将系综理论的基本原理再复述一遍：
 
@@ -609,9 +612,9 @@ pdfstartview = Fit
     \quad\quad 所以等概率假设与 $e^{\beta E_\nu}$ 并不矛盾，因为一个描述的是简并集合内部的等概率性，一个描述的是这些简并集合之间的比例差异。并且，当我们说出“比例差异”的时候，也就自然地将问题理解为了一个几何概型：具有不同能量的各微观态仍然是等概率的，只是个数不一样。
 \end{justification}
 
-\subsection{统计量的物理含义}
+\section{统计量的物理含义}
 
-\subsubsection{正则系综的研究方法}
+\subsection{正则系综的研究方法}
 现在我们来赋予各个统计量以一定的物理含义，我们从能量开始。根据正则分布，定义系统的能量 $U$ 是随机变量 $E$ 的系综平均：
 \begin{equation}
     U=\frac{\sum_r E_r \exp \left(-\beta E_r\right)}{\sum_r \exp \left(-\beta E_r\right)}=-\frac{\partial}{\partial \beta} \ln \left\{\sum_r \exp \left(-\beta E_r\right)\right\}
@@ -653,7 +656,7 @@ pdfstartview = Fit
     S=-k \sum_{r=1}^{\Omega}\left\{\frac{1}{\Omega} \ln \left(\frac{1}{\Omega}\right)\right\}=k \ln \Omega
 \]
 
-\subsubsection{能量的涨落}
+\subsection{能量的涨落}
 
 正则系综将能量 $E$ 视为一个取值为 $(0, \infty)$ 的随机变量，看来有必要研究一下能量的方差，也就是能量涨落，这可以通过对 $U$ 的表达式求导来实现：
 \[
@@ -694,13 +697,13 @@ pdfstartview = Fit
 \end{equation}
 显然，这个密度函数在热力学极限下收敛于 $\delta$ 函数。这也表明： \textcolor{RoyalBlue}{\textbf{\kaishu 正则系综 $(NVT)$ 在热力学极限下依概率收敛于微正则系综 $(NVE)$ 。}}
 
-\subsection{配分函数的性质}
+\section{配分函数的性质}
 
 自从正则系综被引入后，事情似乎变得简单了起来。现在，我们再次来到了起初使用微正则系综时所到达过的统计力学高峰的半山腰，可以停下休息，并回顾之前的上山路径了。在爬山的过程中，我们证明了微正则系综与正则系综实际上是对同一物理系统的两种等价表述。
 
 然而到目前为止，我们并没有提到系综理论与经典力学对一个系统状态的描述方式：相空间有什么紧密的联系——无论是对理想气体的推导还是正则系综的配分函数的计算过程，我们都只是默认了“求和遍及所有的微观态”这件事，而这些微观态是离散的。 \textcolor{RoyalBlue}{\textbf{\kaishu 那么这样的一个离散集合，与相空间中的点有什么联系呢？}}
 
-\subsubsection{微观态与相空间}
+\subsection{微观态与相空间}
 
 很自然的，我们期望这样一件事情的发生： \textcolor{RoyalBlue}{\textbf{\kaishu 相空间中一定区域的体积对应于一个微观态，我们要找到“等效于一个微观态”的基本体积$\omega_0$。}}而事实也确实如此，只需要考虑这样一件事：系统代表点所占据的相空间体积为
 \begin{equation}
@@ -725,9 +728,13 @@ pdfstartview = Fit
 \end{equation}
 更一般地说， \textcolor{RoyalBlue}{\textbf{\kaishu 倘若系统有 $\mathcal{N}$ 个自由度，则所期望的转换系数为 $\omega_0 = h^{\mathcal{N}}$ 。}}
 
-对于量子系统，由于不确定性原理，我们再也无法使用经典的相空间来描述系统的状态了——这看起来与我们“使用相空间中的一定区域来代表一个量子态”的想法不谋而合： \textcolor{RoyalBlue}{\textbf{\kaishu  在相空间任一点 $(q,p)$ 的周围，存在着一定的体积，在这个体积内不可能准确地确定代表点的位置。换句话说，这些相体积可以和系统的量子态一一对应。}}
+对于量子系统，由于不确定性原理，我们再也无法使用经典的相空间来描述系统的状态了——这看起来与我们“使用相空间中的一定区域来代表一个量子态”的想法不谋而合： \textcolor{RoyalBlue}{\textbf{\kaishu  在相空间任一点 $(q,p)$ 的周围，存在着一定的体积，在这个体积内不可能准确地确定代表点的位置。换句话说，这些相体积可以和系统的量子态一一对应。}}而 Bohr 从这里出发，建立了旧量子论的一个重要假设：角动量量子化。
 
-事实上，这就是 Bohr 氢原子模型中的角动量量子化条件，它发轫自经典力学的作用变量-角变量理论——周期运动的系统总是可以通过一定的正则变换，从而使得新哈密顿函数依赖于作用变量 $J$ 与角变量 $\Theta$ ：$H = H(J,\Theta)$ ，其中 $J$ 是守恒量，它的定义为
+通过简单的计算，对于一维量子系统我们可以同样说明，与一个量子态对应的“相空间体积”是 $\omega_0 = 2\pi \hbar = h$ 。
+
+\begin{justification}{\kaishu 反思与质疑}
+\kaishu \fontsize{11pt}{16pt}
+\quad\quad 事实上， Bohr 氢原子模型中的角动量量子化实际上是作用变量量子化，它发轫自经典力学的作用变量-角变量理论——周期运动的系统总是可以通过一定的正则变换，从而使得新哈密顿函数依赖于作用变量 $J$ 与角变量 $\Theta$ ：$H = H(J,\Theta)$ ，其中 $J$ 是守恒量，它的定义为
 \[
     J = \frac{1}{2\pi} \oint pdq
 \]
@@ -735,13 +742,16 @@ pdfstartview = Fit
 \[
     \Theta = \Theta_0 + 2\pi \times \frac{t}{\tau} 
 \]
-而 Bohr 提出，周期运动的电子只能取一些分立的值作为作用变量。所以，这里“角动量的量子化”实际上是作用变量的量子化，只是为了让学界容易接受而使用角动量做了等价表述。所以，对于一维量子系统我们可以同样说明与一个量子态对应的“相空间体积”是 $\omega_0 = 2\pi \hbar = h$ 。
+而 Bohr 提出，周期运动的电子只能取一些分立的值作为作用变量。所以，这里“角动量的量子化”实际上是作用变量的量子化，只是为了让学界容易接受而使用角动量做了等价表述。
+\end{justification}
+
+
 
 现在，我们发现自己处于这样一种境地： \textcolor{RoyalBlue}{\textbf{\kaishu 既然相空间中确定的体积对应于一个微观态，那么对微观态的求和则可以转化为对正则变量 $(q,p)$ 的积分，而且这个转换系数是常数！}}这无疑会为计算正则配分函数提供一种新的视角和随之而来的新方法。作为一个有意义的暗示，如果我们能对系统哈密顿量进行变量分离，那么对相空间的积分也会是变量分离的。
 
 哈密顿函数的变量分离，说明被分离的系统互不干扰，也即是说： \textcolor{RoyalBlue}{\textbf{\kaishu 大系统可以分解为若干无关联系统的加和。}} 
 
-\subsubsection{连续形式的配分函数}
+\subsection{连续形式的配分函数}
 \textcolor{RoyalBlue}{\textbf{\kaishu 为了让这种求和-积分的转变更加丝滑，先来考虑配分函数的连续形式。}}
 
 回想在研究能量涨落时，我们不假思索地将概率密度写为了 $P(E) = \Omega(E)e^{-\beta E}/Q$ ， $\Omega(E)$ 像是能量的简并因子。我们就来完整地对它进行讨论。
@@ -768,7 +778,7 @@ pdfstartview = Fit
 \end{equation}
 积分路径沿着平行于虚轴的右边进行，即沿着直线 $\text{Re}\beta = \beta' >0$ 。当然，只要积分收敛，路径可以连续变形。
 
-也许现在看来，这样做的价值仅是通过拉普拉斯变换的唯一性说明了态密度和配分函数的等价性。但的确有些场合，对于给定系统配分函数的计算，以及随后进行其态密度的计算，确实变得十分简单，而直接从第一性原理出发来进行态密度的计算却是相当复杂的，例如后面将会讨论的相对论气体。
+也许现在看来，这样做的价值仅是通过拉普拉斯变换的唯一性说明了态密度和配分函数的等价性。但的确有些场合，对于给定系统配分函数的计算，以及随后进行其态密度的计算，确实变得十分简单，而直接从第一性原理出发来进行态密度的计算却是相当复杂的，例如相对论气体。
 
 为了这一方法的使用更加顺畅（不至于积不出来），这里有一个相关的积分公式：
 \[
@@ -777,7 +787,7 @@ pdfstartview = Fit
         0 & \text { for } \quad x \leq 0
         \end{array}\right.
 \]
-\subsubsection{无关联系统}
+\subsection{无关联系统}
 \textcolor{RoyalBlue}{\textbf{\kaishu 现在，我们将从配分函数的性质出发，将统计力学推上巅峰。}}
 
 前面讲到，我们希望将相空间的表述形式也囊括进系综理论的范围之内——因为系综是相空间中的一定区域。而物理量 $f(q,p,t)$ 在这一区域上的平均值则是
@@ -829,7 +839,7 @@ pdfstartview = Fit
 \[
     P = - \frac{\partial A}{\partial V} = NkT \frac{\partial \ln Q_1}{\partial V}
 \]
-然而，回顾(\ref*{intuition})一节，在那里我们通过独立性给出了无相互作用粒子的配容数对体积的依赖关系。其实配分函数对体积的依赖关系也是一样的，只要单粒子哈密顿量只依赖于正则变量的一半即可：
+然而，回顾(\ref*{intuition})一节，在那里我们通过独立性给出了无相互作用粒子的配容数对体积的依赖关系。其实配分函数对体积的依赖关系也是一样的，只要单粒子哈密顿量只依赖于正则动量 $\bm{p}$ 即可：
 \[
     Q_1 = \frac{1}{1!\times h^3}\int dq_1dq_2dq_3\int e^{H(p_1,p_2,p_3)}\,dp_1dp_2dp_3  = \frac{V}{h^3} \int e^{H(p_1,p_2,p_3)}\,dp_1dp_2dp_3
 \]
@@ -847,7 +857,7 @@ pdfstartview = Fit
 
 同样的，我们可以使用这种方法来考虑经典理想气体与经典谐振子，根据子系统之间的无关联性，只需要计算单粒子配分函数即可。至于相对论理想气体与量子谐振子系统的配分函数，就留给读者自行完成。
 
-\subsection{总结}
+\section{总结}
 
 正则系综作为微正则系综的等价方法，极大简化了对物理系统的研究与计算。它以简并度 $g(E)$ 整合了具有相同能量的各个简并微观态，并通过拉普拉斯变换后的配分函数 $Q_N(V,T)$ 为核心，与亥姆霍兹自由能建立联系。不仅如此，我们看到这样的配分函数可以因子化，只要系统的哈密顿量变量分离，而这意味着整个系统是无关联系统的简单加和。
 
@@ -865,11 +875,35 @@ pdfstartview = Fit
 
 \end{understanding}
 
+\chapter{巨正则系综}
 
+在上一章中，我们基于微正则系综 $(N,V,E)$ 的三个广度决策变量的测量没有实际可行性的考虑，首先对能量 $E$ 通过勒让德变换将其等价转换为了熵对能量的导数、也就是强度量温度 $T$ ，并将使用 $(N,V,T)$ 作为决策变量的系综称为正则系综。这种理论处理方案的有效性，从已经讨论过的许多例子就可以看得很清楚。然而，对于一些物理和化学问题，正则系综表述形式的适用性毕竟还是有所限制的——不仅系统的能量难以直接测量得到，粒子数目 $N$ 亦是如此。
+
+现在，我们在对能量 $E$ 勒让德变换后，继续对另一个广度性质 $N$ 做勒让德变换。再次回想起以熵 $S$ 为核心的热力学公式
+\[
+    dS = \frac{1}{T} dE + \frac{P}{T} dV - \frac{\mu}{T} dN
+\]
+
+所以，和在正则系综中的思路一样，与 $N$ 等价的强度量为 $\mu$ ，这也就是本章的主题： \textcolor{RoyalBlue}{\textbf{\kaishu 巨正则系综}}。
+
+由于确定热力学系统的一个平衡态至少需要一个广度性质，所以最多只能使用两次勒让德变换。如果不选择 $N$ 而是对 $V$ 做变换，就会得到 \textcolor{RoyalBlue}{\textbf{\kaishu 等温等压系综}}。
+
+
+
+\section{总结}
+
+\begin{justification}{\kaishu 反思与质疑}
+\kaishu \fontsize{11pt}{16pt}
+    \quad\quad 似乎我们的理论在巨正则系综这里走到了尽头，但是不要忘记：最开始的三个广度性质并不一定要选择 $(N,V,E)$ ，因为广度性质的背后，是系统的独立可加运动积分，而这样的可加运动积分一共有七个：能量、动量的三个分量以及角动量的三个分量。所以在原则上，我们完全可以选择可加运动积分的线性组合作为描述系统的状态参量，也就是最优化问题的决策变量。
+
+    \quad\quad 力学系统运动积分是由哈密顿函数确定的，但哈密顿力学本身并不局限于物理。它对称共轭的形式使得人们可以将一些本来和力学相距甚远的问题（比如捕食者-猎物系统中种群数量随时间的变化）通过合适的变换统一在哈密顿体系下。
+    
+    \quad\quad 而系综理论，作为哈密顿力学的统计延伸，同样不受物理的束缚。也就是说，如果今天有了一个现实系统，而经验告诉我们：为了确定系统的状态需要四个状态参量，其中要有一个广度性质。那么这时，巨正则系综是不是还可以更进一步，再做一组勒让德变换呢？
+\end{justification}
 
     
-\section{附录}
-\subsection{无穷小正则变换的行列式的绝对值等于 1}
+\chapter{附录}
+\section{无穷小正则变换的行列式的绝对值等于 1}
 将系统的状态参量 $(q_i,p_i), i = 1,2,\dots n$ 统一表达为 $\xi_\alpha, \alpha = 1,2,\dots 2n$ ，其中前一半是坐标 $q$ ，后一半是动量 $p$ 。引入求和约定，则经典 Poisson 括号可以写为
 \[
     [f, g] = \frac{\partial f}{\partial \xi_\alpha}\Omega_{\alpha\beta}\frac{\partial g}{\partial \xi_\beta}
