--- a/ref.bib
+++ b/ref.bib
@@ -59,6 +59,20 @@ doi = {10.1088/2053-2563/aaf504}
   author          = {郑纪鸣},
   journal         = {},
   number          = {},
-  title           = {统计力学基础},
+  title           = {Lecture Notes},
   year            = {2021}
+}
+@book{yang,
+  author         = {陶洋，杨春雨},
+  editor         = {},
+  publisher      = {},
+  title          = {统计力学笔记},
+  year           = {2023}
+}
+@book{peng,
+  author         = {彭子骏},
+  editor         = {},
+  publisher      = {},
+  title          = {化学物理方法：统计力学},
+  year           = {2022}
 }
