finite energy states lead to a minus temperature

--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -1,3 +1,15 @@
+@article{
+  doi:10.1126/science.177.4047.393,
+  author = {P. W. Anderson },
+  title = {More Is Different},
+  journal = {Science},
+  volume = {177},
+  number = {4047},
+  pages = {393-396},
+  year = {1972},
+  doi = {10.1126/science.177.4047.393},
+  URL = {https://www.science.org/doi/abs/10.1126/science.177.4047.393},
+  eprint = {https://www.science.org/doi/pdf/10.1126/science.177.4047.393}}
 @book{Pathria,
   author         = {R.K. Pathria and Paul D. Beale},
   title = {Statistical Mechanics (Fourth Edition)},
@@ -33,13 +45,41 @@ doi = {10.1088/2053-2563/aaf504}
   title          = {Statistical Physics (Third Edition)},
   year           = {1980}
 }
+@book{Feymann,
+  author         = {R.P.费曼},
+  editor         = {},
+  publisher      = {高等教育出版社},
+  title          = {费曼统计力学讲义},
+  year           = {2021}
+}
+@book{lishangzhi,
+  author         = {李尚志},
+  editor         = {},
+  publisher      = {高等教育出版社},
+  title          = {线性代数（数学专业用）},
+  year           = {2006}
+}
+@book{anuoerde,
+  author         = {B.阿诺尔德},
+  editor         = {},
+  publisher      = {高等教育出版社},
+  title          = {经典力学的数学方法},
+  year           = {2006}
+}
+@book{Goldstein,
+  author         = {Herbert Goldstein and Charles Poole and John Safco},
+  editor         = {},
+  publisher      = {高等教育出版社},
+  title          = {经典力学：第三版},
+  year           = {2005}
+}
 
 @book{liang,
   author         = {梁昆淼},
   editor         = {},
   publisher      = {高等教育出版社},
   title          = {力学（下册）理论力学},
-  year           = {}
+  year           = {2009}
 }
 @book{pan,
   author         = {潘海俊},
@@ -51,28 +91,28 @@ doi = {10.1088/2053-2563/aaf504}
 @book{suyu,
   author         = {苏禹},
   editor         = {},
-  publisher      = {},
+  publisher      = {中国科学技术大学},
   title          = {统计力学笔记},
   year           = {2022}
 }
 @book{zheng,
   author          = {郑纪鸣},
-  journal         = {},
-  number          = {},
+  editor          = {},
+  publisher       = {中国科学技术大学},
   title           = {Lecture Notes},
   year            = {2021}
 }
 @book{yang,
   author         = {陶洋，杨春雨},
   editor         = {},
-  publisher      = {},
+  publisher      = {中国科学技术大学},
   title          = {统计力学笔记},
   year           = {2023}
 }
 @book{peng,
   author         = {彭子骏},
   editor         = {},
-  publisher      = {},
+  publisher      = {中国科学技术大学},
   title          = {化学物理方法：统计力学},
   year           = {2022}
 }
