--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -116,3 +116,10 @@ doi = {10.1088/2053-2563/aaf504}
   title          = {化学物理方法：统计力学},
   year           = {2022}
 }
+@book{wang,
+  author         = {汪志诚},
+  editor         = {},
+  publisher      = {高等教育出版社},
+  title          = {热力学·统计物理},
+  year           = {2013}
+}
