new chapter: theory of simple gases

--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 
 \frontmatter
 \input{chapters/foreword.tex}
+
 % \listoffigures
 % \listoftables
 
@@ -22,6 +23,7 @@
 \input{chapters/basic_principles.tex}
 \input{chapters/canonical_ensembles.tex}
 \input{chapters/grand_canonical_ensembles.tex}
+\input{chapters/the_theory_of_simple_gases.tex}
 
 \appendix
 \input{chapters/complementary.tex}
