synthetical judgments a priori

--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -123,3 +123,10 @@ doi = {10.1088/2053-2563/aaf504}
   title          = {热力学·统计物理},
   year           = {2013}
 }
+@book{kant,
+  author         = {康德},
+  editor         = {},
+  publisher      = {人民出版社},
+  title          = {纯粹理性批判},
+  year           = {2017}
+}
