--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,7 @@
 \input{chapters/canonical_ensembles.tex}
 \input{chapters/grand_canonical_ensembles.tex}
 \input{chapters/the_theory_of_simple_gases.tex}
+\input{chapters/phase_transition.tex}
 
 \appendix
 \input{chapters/complementary.tex}
