delete cite and rename the note

--- a/cover/cover.tex
+++ b/cover/cover.tex
@@ -12,7 +12,7 @@
     %    Title
     %------------------------------------------------------------
 
-    {\Huge Statistical Mechanics}
+    {\Huge Introduction to Statistical Mechanics}
 
     \vspace{0.025\textheight}   % Whitespace between the title and short horizontal rule
 
