new chapter: non-equilibrium statistical mechanics

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,7 @@
 \input{chapters/grand_canonical_ensembles.tex}
 \input{chapters/the_theory_of_simple_gases.tex}
 \input{chapters/phase_transition.tex}
+\input{chapters/nonequilibrium.tex}
 
 \appendix
 \input{chapters/complementary.tex}
