--- a/main.tex
+++ b/main.tex
@@ -22,9 +22,9 @@
 \mainmatter
 \input{chapters/basic_principles.tex}
 \input{chapters/canonical_ensembles.tex}
-\input{chapters/grand_canonical_ensembles.tex}
-\input{chapters/the_theory_of_simple_gases.tex}
-\input{chapters/phase_transition.tex}
+% \input{chapters/grand_canonical_ensembles.tex}
+% \input{chapters/the_theory_of_simple_gases.tex}
+% \input{chapters/phase_transition.tex}
 \input{chapters/nonequilibrium.tex}
 
 \appendix
