--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 \input{chapters/canonical_ensembles.tex}
 % \input{chapters/grand_canonical_ensembles.tex}
 % \input{chapters/the_theory_of_simple_gases.tex}
-% \input{chapters/phase_transition.tex}
+\input{chapters/phase_transition.tex}
 \input{chapters/nonequilibrium.tex}
 
 \appendix
